--- a/sudoku.html
+++ b/sudoku.html
@@ -4,5 +4,187 @@
     <script type="text/javascript" src="sudoku.js"></script>
     </head>
     <body>
+    <div id="board">
+        <table>
+            <tr>
+                <td>
+                    <table>
+                        <tr>
+                            <td id='0'>1</td>
+                            <td id='1'>2</td>
+                            <td id='2'>3</td>
+                        </tr>
+                        <tr>
+                            <td id='9'>4</td>
+                            <td id='10'>5</td>
+                            <td id='11'>6</td>
+                        </tr>
+                        <tr>
+                            <td id='18'>7</td>
+                            <td id='19'>8</td>
+                            <td id='20'>9</td>
+                        </tr>
+                    </table>
+                </td>
+                <td>
+                    <table>
+                        <tr>
+                            <td id='3'>1</td>
+                            <td id='4'>2</td>
+                            <td id='5'>3</td>
+                        </tr>
+                        <tr>
+                            <td id='12'>4</td>
+                            <td id='13'>5</td>
+                            <td id='14'>6</td>
+                        </tr>
+                        <tr>
+                            <td id='21'>7</td>
+                            <td id='22'>8</td>
+                            <td id='23'>9</td>
+                        </tr>
+                    </table>
+                </td>
+                <td>
+                   <table>
+                        <tr>
+                            <td id='6'>1</td>
+                            <td id='7'>2</td>
+                            <td id='8'>3</td>
+                        </tr>
+                        <tr>
+                            <td id='15'>4</td>
+                            <td id='16'>5</td>
+                            <td id='17'>6</td>
+                        </tr>
+                        <tr>
+                            <td id='24'>7</td>
+                            <td id='25'>8</td>
+                            <td id='26'>9</td>
+                        </tr>
+                   </table> 
+                </td>
+            </tr>
+            <tr>
+                <td>
+                    <table>
+                        <tr>
+                            <td id='27'>1</td>
+                            <td id='28'>2</td>
+                            <td id='29'>3</td>
+                        </tr>
+                        <tr>
+                            <td id='36'>4</td>
+                            <td id='37'>5</td>
+                            <td id='38'>6</td>
+                        </tr>
+                        <tr>
+                            <td id='45'>7</td>
+                            <td id='46'>8</td>
+                            <td id='47'>9</td>
+                        </tr>
+                    </table>
+                </td>
+                <td>
+                    <table>
+                        <tr>
+                            <td id='30'>1</td>
+                            <td id='31'>2</td>
+                            <td id='32'>3</td>
+                        </tr>
+                        <tr>
+                            <td id='39'>4</td>
+                            <td id='40'>5</td>
+                            <td id='41'>6</td>
+                        </tr>
+                        <tr>
+                            <td id='48'>7</td>
+                            <td id='49'>8</td>
+                            <td id='50'>9</td>
+                        </tr>
+                    </table>
+                </td>
+                <td>
+                   <table>
+                        <tr>
+                            <td id='33'>1</td>
+                            <td id='34'>2</td>
+                            <td id='35'>3</td>
+                        </tr>
+                        <tr>
+                            <td id='42'>4</td>
+                            <td id='43'>5</td>
+                            <td id='44'>6</td>
+                        </tr>
+                        <tr>
+                            <td id='51'>7</td>
+                            <td id='52'>8</td>
+                            <td id='53'>9</td>
+                        </tr>
+                   </table> 
+                </td>
+            </tr>
+            <tr>
+                <td>
+                    <table>
+                        <tr>
+                            <td id='54'>1</td>
+                            <td id='55'>2</td>
+                            <td id='56'>3</td>
+                        </tr>
+                        <tr>
+                            <td id='63'>4</td>
+                            <td id='64'>5</td>
+                            <td id='65'>6</td>
+                        </tr>
+                        <tr>
+                            <td id='72'>7</td>
+                            <td id='73'>8</td>
+                            <td id='74'>9</td>
+                        </tr>
+                    </table>
+                </td>
+                <td>
+                    <table>
+                        <tr>
+                            <td id='57'>1</td>
+                            <td id='58'>2</td>
+                            <td id='59'>3</td>
+                        </tr>
+                        <tr>
+                            <td id='66'>4</td>
+                            <td id='67'>5</td>
+                            <td id='68'>6</td>
+                        </tr>
+                        <tr>
+                            <td id='75'>7</td>
+                            <td id='76'>8</td>
+                            <td id='77'>9</td>
+                        </tr>
+                    </table>
+                </td>
+                <td>
+                   <table>
+                        <tr>
+                            <td id='60'>1</td>
+                            <td id='61'>2</td>
+                            <td id='62'>3</td>
+                        </tr>
+                        <tr>
+                            <td id='69'>4</td>
+                            <td id='70'>5</td>
+                            <td id='71'>6</td>
+                        </tr>
+                        <tr>
+                            <td id='78'>7</td>
+                            <td id='79'>8</td>
+                            <td id='80'>9</td>
+                        </tr>
+                   </table> 
+                </td>
+            </tr>
+
+        </table>
+    </div>
     </body>
 <html>
