created puzzles class, added new methods to UI

--- a/sudoku.html
+++ b/sudoku.html
@@ -1,15 +1,17 @@
 <!doctype html>
 <html>
     <head>
+    <link rel="stylesheet" type="text/css" href="sudoku.css" />
+    <script type="text/javascript" src="jquery-1.7.1.min.js"></script>
     <script type="text/javascript" src="sudoku.js"></script>
     </head>
     <body>
-    <div id="board">
-        <table>
-            <tr>
+    <div >
+        <table >
+            <tr >
                 <td>
-                    <table>
-                        <tr>
+                    <table >
+                        <tr >
                             <td id='0'>1</td>
                             <td id='1'>2</td>
                             <td id='2'>3</td>
