Break sudoku.js file out into separate files for each module

--- a/sudoku.html
+++ b/sudoku.html
@@ -2,11 +2,13 @@
 <html>
     <head>
     <link rel="stylesheet" type="text/css" href="css/bootstrap.css" />
-    <link rel="stylesheet" type="text/css" href="sudoku.css" />
-    <script type="text/javascript" src="jquery-1.7.1.min.js"></script>
+    <link rel="stylesheet" type="text/css" href="css/sudoku.css" />
+    <script type="text/javascript" src="js/jquery-1.7.1.min.js"></script>
     <script type="text/javascript" src="js/bootstrap.js"></script>
-    <script type="text/javascript" src="sudoku.js"></script>
-    <script type="text/javascript" src="Encoder.js"></script>
+    <script type="text/javascript" src="js/solver.js"></script>
+    <script type="text/javascript" src="js/ui.js"></script>
+    <script type="text/javascript" src="js/puzzles.js"></script>
+    <script type="text/javascript" src="js/sudoku.js"></script>
     </head>
     <body>
     <div >
