--- a/sudoku.html
+++ b/sudoku.html
@@ -11,7 +11,14 @@
     <script type="text/javascript" src="js/sudoku.js"></script>
     </head>
     <body>
-    <div >
+    <div class="container">
+    <div class="row-fluid">
+        <div class="span12">
+            <h1>Sudoku!</h1>
+        </div>
+    </div>
+    <div class="row-fluid">
+        <div class="span6">
         <table >
             <tr >
                 <td>
@@ -190,17 +197,24 @@
                    </table> 
                 </td>
             </tr>
-
         </table>
-    </div>
-    <div>
-        <div>
-            <button id='status' class='btn'>How am I doing?</button>
         </div>
-        <div id='hints' class='btn-group' data-toggle='buttons-radio'>
-            <button id='disablehints' class='btn'>Enable Hints</button>
-            <button id='enablehints' class='btn' data-toggle='button'>Disable Hints</button>
+    <div class="span3" >
+        <p>
+        <button id='status' class='btn'>How am I doing?</button>
+        </p>
+        <p>
+        <div id='hints' class='btn-group' data-toggle='buttons-radio' >
+            <button id='enablehints' class='btn'>Enable Hints</button>
+            <button id='disablehints' class='btn' data-toggle='button'>Disable Hints</button>
         </div>
+        </p>
+        <p>
+        <button id='save' class='btn' >Save</button>
+        </p>
+        <p>
+        <button id='solve' class='btn'>Solve</button>
+        </p>
     </div>
     </body>
 <html>
